--- a/Index.html
+++ b/Index.html
@@ -11,11 +11,11 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
+        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150">
         <p class="lead">Eu sou Ana Maria_</p>
         <h1>Eu ensino Programação</h1>
-        <p>Ana, estudante do 3Ano do ensino medio da Escola Astrogildo Arruda.
-        sOU uma pessoa prestativa, esforçada, protagonista e uma boa ouvinte.</p>
+        <p>Ana, estudante do 3º ano do Ensino Médio da Escola Astrogildo Arruda.  
+        Sou uma pessoa prestativa, esforçada, protagonista e uma boa ouvinte.</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
             <p class="badge bg-secondary">CSS</p>
@@ -23,20 +23,50 @@
             <p class="badge bg-secondary">Scratch</p>
         </div>
     </header>
+
     <main class="container">
-        <h2>Meus projetos</h2>
+        <h2>Meus Projetos</h2>
         <div class="row">
+
+            <!-- Projeto p5.js -->
             <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card">
+                    <img src="img/p5-logo.png" class="card-img-top" alt="Projeto p5.js">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a
-                  </div>
+                        <h5 class="card-title">Projeto com p5.js</h5>
+                        <p class="card-text">Desenhos e interações usando a biblioteca gráfica p5.js.</p>
+                        <a href="https://editor.p5js.org/seu-usuario/full/seu-projeto" target="_blank" class="btn btn-primary">Ver projeto</a>
+                    </div>
+                </div>
             </div>
+
+            <!-- Projeto GitHub -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/github-logo.png" class="card-img-top" alt="Projeto GitHub">
+                    <div class="card-body">
+                        <h5 class="card-title">Repositório no GitHub</h5>
+                        <p class="card-text">Códigos e projetos hospedados no meu GitHub.</p>
+                        <a href="https://github.com/seu-usuario/seu-repositorio" target="_blank" class="btn btn-primary">Ver no GitHub</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Projeto Scratch -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/scratch-logo.png" class="card-img-top" alt="Projeto Scratch">
+                    <div class="card-body">
+                        <h5 class="card-title">Projeto no Scratch</h5>
+                        <p class="card-text">Jogos e animações criados na plataforma Scratch.</p>
+                        <a href="https://scratch.mit.edu/projects/seu-projeto-id" target="_blank" class="btn btn-primary">Ver no Scratch</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
